# example-pyproject

./: .gitignore  README.md  example-config.yaml  pyproject.toml
example_project/: __main__.py  cli.py  config.py  pipeline.py
example_project/steps/: __init__.py  add.py  average.py  base.py
